# phoebe

./: CMakeLists.txt  package.xml
config/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml
launch/: camera1.launch  camera2.launch  controllers.launch  gmapping.launch  laser.launch  manager.launch  minicam1.launch  minicam2.launch  minicams.launch  move_base.launch  octomap_mapping.launch  openni2.launch  p2os.launch  state_publisher.launch
msg/: JointMap.msg
scripts/: calibration.sh  disable_motors.sh  enable_motors.sh  front.sh  laser_tf.sh  rest.sh  rotate_ccw.sh  rotate_cw.sh  stop.sh  throttle.sh  zero.sh
src/: dynamixel_pos_relay.cpp  gripper_angle.cpp  jointstate_publisher.cpp  kinmodel_tutorial.cpp  state_relay.cpp
